# text_parser

./: Cargo.toml  readme.md
src/: lib.rs  main.rs
